--- a/Frontend/contacts.css
+++ b/Frontend/contacts.css
@@ -1,4 +1,4 @@
-/* For login page */
+/* Navigation Bar */
 .topnav
 {
     position: fixed;
@@ -42,6 +42,7 @@
 
 }
 
+/* Fonts, body adjustments */
 *
 {
     margin: 0;
@@ -55,43 +56,13 @@ html, body
     margin: 2px;
     scrollbar-width: none;
 }
+
 body
 {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-}
-
-.glass-container
-{
-    width: 400px;
-    height: 450px;
-    position: relative;
-    z-index: 1;
-    background: rgba(255,255,255,0.1);
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    border-radius: 15px;
-    border: 2px solid rgb(88, 65, 49);
-}
-
-.glass-container::before
-{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    backdrop-filter: blur(5px);
-    z-index: -1;
-
-}
-
-.login-box
-{
-    max-width: 330px;
-    margin: 0 auto;
-    text-align: center;
 }
 
 h2
@@ -101,13 +72,7 @@ h2
     margin-bottom: -20px;
 }
 
-form
-{
-    display: flex;
-    flex-direction: column;
-    margin-top: 30px;
-}
-
+/* Contacts page adjustments */
 input
 {
     padding: 10px;
@@ -116,40 +81,18 @@ input
     border-radius: 10px;
     background: transparent;
     border: 1px solid rgb(88, 65, 49);
-    color: rgb(224, 213, 206);
+    color: rgb(117, 99, 87);
     font-size: 14px;
 }
 
 input::placeholder
 {
-    color: rgb(224, 213, 206);
+    color: rgb(117, 99, 87);
 }
 
 input:focus
 {
     outline: 2px black;
-}
-
-.options
-{
-    display: flex;
-    align-items: center;
-    margin-top: 15px;
-    font-size: 15px;
-    color: rgb(228, 218, 212);
-}
-
-.options input
-{
-    margin-right: 5px;
-    margin-top: 0px;
-}
-
-.options a 
-{
-    text-decoration: none;
-    color: rgb(228, 218, 212);
-    margin-left: auto;
 }
 
 button
@@ -175,11 +118,35 @@ p
     margin-top: 15px;
 }
 
-#register
+.addContact form
 {
-    text-decoration: none;
-    color:rgb(88, 65, 49);
-    font-weight: bold;
+    margin-bottom: 50px;
 }
 
+.search-container
+{
+    margin-top: -120px;
+}
+/* Table adjustments */
+.table
+{
+    margin-top: 10px;
+}
 
+th
+{
+    color: rgb(88, 65, 49);
+    padding: 12px 90px;
+    position: relative;
+    width: 34%;
+}
+
+tbody
+{
+    background-color: rgba(83, 55, 32, 0.27);
+}
+
+input
+{
+    width: 250px;
+}
