--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -13,7 +13,8 @@
     text-align: right;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .topnav a:hover 
